--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,7 @@ body{
     height: 113px;
     width: 1663px;
     position: fixed;
+    z-index: 3;
 }
 #bar img{
 	height: 45px;
@@ -33,4 +34,17 @@ body{
 }
 #bar a:hover{
 	color: #FF00BF;
+}
+#footer1{
+	background-color: #323345;
+}
+#footer1 div{
+	margin-left: 100px;
+    margin-right: 30px;
+}
+.enlace{
+	color: #E9F0F2;
+	font-weight: 300;
+	padding-bottom: 20px;	
+	text-decoration: none;	
 }
