--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -155,3 +155,79 @@ header video{
 .second iframe{
     width:195%;
 }
+.primero{
+    background-color: rgb(51, 52, 71);
+    color:white;
+    height: 290px;
+}
+.log{
+    position: relative;
+    margin-top: 15px;
+    margin-right: 34px;
+    margin-left: 94px;
+    height: 293px;
+    right: 96px;
+}
+.log h1{
+    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
+    line-height: 2;
+    font-size: 20px;
+}
+.link{
+    cursor: pointer;
+    font-size: 13px;
+    margin-top: 12px;
+    margin-bottom: 24px;
+    color: white;
+    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
+}
+.link:hover{
+    color:#ff00bf;
+}
+.img-media{
+    margin-top: 50px;
+}
+.img-media img{
+    width: 135px;
+    height: 40px;
+    margin-bottom: 20px;
+    flex-direction: column;
+}
+.social-media{
+    border-radius: 100%;
+    width: 35px;
+    height: 35px;
+    border: 2px solid white;
+    text-align: center;
+    display: inline-block;
+    margin-right: 50px;
+}
+.social-media i{
+    position: relative;
+    top: 9px;
+}
+.underline{
+    border: 1px solid white;
+    width: 50%;
+    position: absolute;
+    margin-top: 70px;
+}
+.media{
+    height: 104px;
+}
+footer{
+    background-color: rgb(51, 52, 71);
+    display: flex;
+    justify-content: center;
+    padding: 30px;
+    background-color: #323345;
+    color: white;
+}
+.final{
+    background-color: rgb(51, 52, 71);
+    height: 40px;
+}
+.final p{
+    display: flex;
+    justify-content: center;
+}
